# GUARDIAN-OTA

./: .gitignore  ARCHITECTURE.md  FLOW_ANALYSIS.md  INTEGRATION_SETUP.md  OTA_SPEC.md  README.md  RUN.md  SYSTEM_DESIGN.md  landing.tsx  package-lock.json  run.js  start.sh
backend/: .env.example  go.mod  go.sum  main.go
backend/api/: handlers.go
backend/blockchain/: ethereum.go
backend/campaign/: campaign.go  campaign_test.go
backend/events/: events.go
backend/mqtt/: mqtt.go
backend/twin/: twin.go  twin_test.go
backend/ws/: hub.go
dashboard/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/PANELS/: Dashboard.html  Teminal.html  Update_Manager_updated.html  Update_manager.html  verification_panel.html
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: AddDeviceModal.tsx  BrandLogo.tsx  CarBackground.tsx  CarModel3D.tsx  DeviceBar.tsx  Documentation.tsx  ECUPanel.tsx  FleetContext.tsx  FleetDashboard.tsx  FleetStats.tsx  GuardianLogo.tsx  Icon.tsx  LogsModal.tsx  SecurityPanel.tsx  Sidebar.tsx  Terminal.tsx  TopBar.tsx  UpdatePanel.tsx  VehicleInsight.tsx  VerificationSim.tsx  companyLogos.tsx  dashboard.tsx  landing.jsx  (+2 more)
deploy/: .env.example  docker-compose.yml
firmware/: CMakeLists.txt  deploy_ota.py  firmware.sig.b64  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ecu_tasks.c  ecu_tasks.h  lcd.c  lcd.h  main.c  mqtt_transport.c  mqtt_transport.h  ota_handler.c  ota_handler.h  security.c  security.h  wifi_connect.c
(+10 files in other folders)
